--- a/templates/stats.html.j2
+++ b/templates/stats.html.j2
@@ -5,49 +5,49 @@
 {% block title %}Overall Stats{% endblock %}
 
 {% block content %}
-  <h1 class="heading heading--primary">MTG Stats</h1>
+<h1 class="heading heading--primary">MTG Stats</h1>
 
-  <!-- Player Stats -->
-  <section>
-    <h2 class="heading heading--secondary">Player Win Rates</h2>
-    <table class="table">
-      <thead>
-        <tr>
-          <th class="table__header">Player Name</th>
-          <th class="table__header">Games Played</th>
-          <th class="table__header">Wins</th>
-          <th class="table__header">Win Rate (%)</th>
-        </tr>
-      </thead>
-      <tbody>
-        {% for row in player_stats %}
-          <tr class="table__row">
-            <td class="table__cell">
-              <a class="link" href="{{ url_for('player_detail', player_name=row[0]) }}">
-                {{ row[0] }}
-              </a>
-            </td>
-            <td class="table__cell">{{ row[1] }}</td>
-            <td class="table__cell">{{ row[2] }}</td>
-            <td class="table__cell">{{ row[3] }}</td>
-          </tr>
-        {% endfor %}
-      </tbody>
-    </table>
-  </section>
+<!-- Player Stats -->
+<section>
+  <h2 class="heading heading--secondary">Player Win Rates</h2>
+  <table class="table">
+    <thead>
+      <tr>
+        <th class="table__header">Player</th>
+        <th class="table__header">Games</th>
+        <th class="table__header">Wins</th>
+        <th class="table__header">WR</th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for row in player_stats %}
+      <tr class="table__row">
+        <td class="table__cell">
+          <a class="link" href="{{ url_for('player_detail', player_name=row[0]) }}">
+            {{ row[0] }}
+          </a>
+        </td>
+        <td class="table__cell">{{ row[1] }}</td>
+        <td class="table__cell">{{ row[2] }}</td>
+        <td class="table__cell">{{ row[3]|round|int }}%</td>
+      </tr>
+      {% endfor %}
+    </tbody>
+  </table>
+</section>
 
-  <!-- Commander Stats -->
-  <section>
-    <h2 class="heading heading--secondary">Commander Usage</h2>
-    {{ commander_table(commander_stats, clickable=true) }}
-  </section>
+<!-- Commander Stats -->
+<section>
+  <h2 class="heading heading--secondary">Commander Usage</h2>
+  {{ commander_table(commander_stats, clickable=true) }}
+</section>
 
-  <section>
-    <h2 class="heading heading--secondary">Overall Color Distribution</h2>
-    {{ color_table(color_stats) }}
-  </section>
+<section>
+  <h2 class="heading heading--secondary">Overall Color Distribution</h2>
+  {{ color_table(color_stats) }}
+</section>
 
-  {{ commander_modal() }}
+{{ commander_modal() }}
 
-  <script src="{{ url_for('static', filename='js/commander-modal.js') }}"></script>
+<script src="{{ url_for('static', filename='js/commander-modal.js') }}"></script>
 {% endblock %}
